--- a/app/layouts/common/index.html
+++ b/app/layouts/common/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Raccoon: The Sneaky Little Framework</title>
 		<link rel="icon" type="image/gif" href="/assets/images/favicon.gif" />
-		<link rel="stylesheet" href="/app/assets/styles/global.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/assets/styles/global.css" type="text/css" media="screen" />
 	</head>
 	<body>
 		
