Initial commit of new template engine.

--- a/app/layouts/common/index.html
+++ b/app/layouts/common/index.html
@@ -10,12 +10,12 @@
 		<div id="wrapper">
 			<div id="header">
 				<div id="nav">
-					version $(Raccoon.version) / 
+					version <#: Raccoon.version #> / 
 					<a href="http://raccoon.keetology.com/" title="Raccoon Site">official site</a>
 				</div>
 			</div>
 			<div id="main">
-				$(data.content)
+				<#: this.content #>
 			</div>
 			<div id="footer">
 				<strong>Raccoon &copy; 2009, Mark Obcena.</strong> A joint experiment of Keetology and Pumppumedia.
