--- a/app/layouts/common/helloworld.html
+++ b/app/layouts/common/helloworld.html
@@ -1,3 +1,3 @@
-<h1 class="callout">$(data.greeting)</h1>
+<h1 class="callout"><#: this.greeting #></h1>
 
 <p>Looks like you've discovered the wonderful world of views and routing! Great!</p>
