--- a/app/layouts/common/welcome.html
+++ b/app/layouts/common/welcome.html
@@ -1,9 +1,9 @@
-<h1 class="callout">Hooray! You're running Raccoon $(Raccoon.version)!</h1>
+<h1 class="callout">Hooray! You're running Raccoon <#: Raccoon.version #>!</h1>
 <p>Have I told you how awesome you are? Because you are awesome. No seriously! Here's a waving box to prove it: [ ]/</p>
 
 <h2>Your Setup</h2>
 <ul>
-	$code( for (var i in system.env) { )
-	<li><strong>$(i)</strong>. $(system.env[i])</li>
-	$code( } )
+	<# for (var i in system.env) { #>
+	<li><strong><#: i #></strong>. <#: system.env[i] #></li>
+	<# } #>
 </ul>
